fixed colors issues added new brand image for better contrast and fixed positions issues

--- a/assets/css/resources.css
+++ b/assets/css/resources.css
@@ -1,42 +1,40 @@
-
 #resource-title {
-    text-align: center;
-    margin: 40px;
-    padding-bottom: 30px;
-    background: linear-gradient(90deg, #FF0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #4B0082, #9400D3);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    
-    .resource-row {
-      margin-top: 30px;
-      margin-left: 20px;
-    }
-    
-    .resource-img {
-      width: 50%;
-      height: 50%;
-      border-radius: 3px;
-      margin: 15px;
-      padding-bottom: 20px;
-    }
-    
-    
-    .resource-row a {
-      text-decoration: none;
-    }
+  text-align: center;
+  margin: 40px;
+  padding: 30px;
+  background: linear-gradient(90deg, #FF4444, #FF9F44, #FFFF44, #FFCA44, #FF4444, #9A44FF, #D144FF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-    #project h1 {
-      
-    }
+.resource-row {
+  margin: auto;
+}
 
-    #project h3 {
-      text-align: center;
-      background: linear-gradient(90deg, #FF0000, #FF7F00, #FFFF00, #00FF00, #0000FF, #4B0082, #9400D3);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+.resource-img {
+  display: block;
+  margin: 15px auto;
+  height: auto;
+  padding: 10px;
+  width: 15vw;
+}
 
-    #project p {
-      color: #ffffffce;
-    }
+
+
+.resource-row a {
+  text-decoration: none;
+}
+
+.resource-row h3 {
+  text-align: center;
+  padding-bottom: 20px;
+  background: linear-gradient(90deg, #FF4444, #FF9F44, #FFFF44, #FFCA44, #FF4444, #9A44FF, #D144FF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.resource-row p {
+  color: #ffffffce;
+  margin-top: 20px;
+  text-align: center;
+}
